# todo-app

backend/: .env  .pre-commit-config.yaml  Makefile  poetry.toml  pyproject.toml
backend/src/: all_routes.py  connection.py  main.py  setting.py
backend/src/decoders/: todo.py
backend/src/model/: pydantic_model.py  sql_model.py
backend/src/operations/: to_do.py
backend/src/routes/: todo.py
